# Vera

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  Shakefile.hs  _CoqProject  dune-project  dune-workspace  flake.nix  test.sh  test_results_2025-01-14.txt  test_results_2025-01-15.txt
.claude/: CLAUDE.md
benchtest/: .gitignore  Shakefile.hs  build.sh
benchtest/templates/: compare.eqy.j2
examples/: .gitignore  Makefile  add.sv  add_constants.sv  always_test.sv  compare.eqy.j2  run_all.sh  shuffled.sv  synth.tcl  unequal_shift.sv
examples/adder/: carry_lookahead.sv  plus_operator.sv  ripple_carry.sv
lib/: dune
nix/: eqy.nix
test/: always_only.sv  assign_only.sv  dune  find_difference.py  run.py  run.sh  simulate_result.py
tests/: .ocamlformat-ignore  benchtests.ml  dune  testlib.ml
vera/: BVList.v  Bitvector.v  BitvectorInterface.v  Common.v  Decidable.v  DropInternal.v  EnvStack.v  EquivalenceTop.v  Netlist.v  NetlistSemantics.v  NetlistToSMT.v  ParseRawVerilog.v  RemoveInternal.v  SMT.v  SMTLib.v  SMTQueries.v  Tactics.v  Verilog.v  VerilogCanonicalize.v  VerilogCanonicalizeCorrect.v  VerilogEquivalence.v  VerilogEquivalenceCorrectness.v  VerilogSMT.v  VerilogSemantics.v  VerilogSimpl.v  VerilogSort.v  VerilogToNetlist.v  VerilogToSMT.v  VerilogToSMTCorrect.v  VerilogTypecheck.v  dune
vvequiv/: Bitvector.v  Common.v  EnvStack.v  Names.v  Netlist.v  NetlistSemantics.v  NetlistToSMT.v  ParseRawVerilog.v  SMT.v  VVEquiv.v  Verilog.v  VerilogEquivalence.v  VerilogSemantics.v  VerilogToNetlist.v  VerilogTypecheck.v  dune
(+74 files in other folders)
